# Remind

./: .gitignore  README.md  config.status  configure.in  meson.build
ref/: configure.output  make.output
src/: Makefile  config.h  config.h.in  version.h
www/: Makefile
